# quik-ai

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
samples/data_types/: data_types.ipynb
samples/iris/: iris.ipynb
samples/mnist/: mnist.ipynb
samples/mnist_series/: mnist_series.ipynb
samples/simple_density/: simple_density.ipynb
samples/simple_linear_regression/: simple_linear_regression.ipynb
samples/simple_time_series/: simple_time_series.ipynb
samples/time_group_series/: time_group_series.ipynb
samples/weighted_density/: weighted_density.ipynb
src/quik_ai/: __init__.py  backend.py  engine.py  heads.py  layers.py  losses.py  metrics.py  models.py  optimizers.py  predictors.py  tuners.py  tuning.py
