[metadata]
name = quik-ai
version = 1.1.0
author = Aleksandr Touzov
description = Quick Unifying Infrastructure Kit for Machine Learning and AI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/touzov1012/quik-ai
download_url = https://github.com/touzov1012/quik-ai/archive/refs/tags/v1.1.0.tar.gz
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent

[options]
include_package_data = True
package_dir = 
	= src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.csv, *.pb, *.index, *.data*